common/istio-1-24/istio-install/overlays/86labs/deny_all_authorizationpolicy.yaml
# Enforce an explicit deny-by-default authorization model, similar to
# the deprecated Istio RBAC
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: istio-system
spec:
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
